# tau

./: .gitignore  .hive.toml  Cargo.toml  README.md
agent/: Cargo.toml
agent/benches/: agent_construction.rs
agent/src/: agent.rs  completion_tools.rs  context.rs  episode.rs  lib.rs  loop_.rs  orchestrator.rs  stats.rs  thread.rs  types.rs
agent/tests/: agent_loop.rs  agent_test.rs  common.rs  context_test.rs  e2e.rs  stats_test.rs
ai/: Cargo.toml
ai/benches/: message_serde.rs  sse_parsing.rs
ai/src/: catalog.rs  codex_auth.rs  concurrency.rs  lib.rs  models.rs  providers.rs  retry.rs  stream.rs  types.rs
ai/src/providers/: anthropic.rs  kimi.rs  mod.rs  openai_chat.rs  openai_chat_shared.rs  openai_responses.rs  openai_responses_shared.rs  sse.rs
ai/tests/: abort.rs  anthropic_provider.rs  anthropic_tool_name_normalization.rs  bedrock_models.rs  cache_retention.rs  common.rs  context_overflow.rs  cross_provider_handoff.rs  empty.rs  github_copilot_anthropic.rs  google_gemini_cli_claude_thinking_header.rs  google_gemini_cli_empty_stream.rs  google_gemini_cli_retry_delay.rs  google_shared_gemini3_unsigned_tool_call.rs  google_thinking_signature.rs  google_tool_call_missing_args.rs  image_tool_result.rs  interleaved_thinking.rs  openai_codex_stream.rs  openai_completions_tool_choice.rs  openai_completions_tool_result_images.rs  openai_responses_provider.rs  openai_responses_reasoning_replay_e2e.rs  proptest_serde.rs  proptest_sse.rs  stream_test.rs  supports_xhigh.rs  tokens.rs  tool_call_id_normalization.rs  tool_call_without_result.rs  total_tokens.rs  transform_messages_copilot_openai_to_anthropic.rs  unicode_surrogate.rs  xhigh.rs
benchmarks/: TEMPLATE.md  microbenchmarks.md  pyproject.toml
benchmarks/compaction-efficiency/: SPEC.md  analyze.py  run.py  variants.py
benchmarks/compaction-efficiency/fixtures/add-cli-flag/: metadata.json  prompt.md
benchmarks/compaction-recall/: SPEC.md  generate.py  run.py  score.py  variants.py
benchmarks/coordination-mechanism/: SPEC.md  mechanism_score.py  mechanism_score_test.py  run.py  run_test.py  variants.py
benchmarks/coordination-routing/: SPEC.md  run.py  score.py  score_test.py  variants.py
benchmarks/flask-books/: prompt.txt  run.sh
benchmarks/fuzzy-e2e/: SPEC.md  generate.py  run.py  variants.py  verify.py
benchmarks/fuzzy-false-positive/: SPEC.md  generate.py  run.py
benchmarks/fuzzy-false-positive/corpus/: README.md
benchmarks/fuzzy-match/: SPEC.md  generate_corpus.py  matchers.py  run.py
benchmarks/fuzzy-match/corpus/: README.md
benchmarks/harbor/: __init__.py  install-tau.sh.j2  tau_agent.py
benchmarks/parallel-ops/: SPEC.md  analyze.py  generate.py  run.py  variants.py
benchmarks/post-edit-diagnostics/: SPEC.md  run.py  variants.py
benchmarks/shared/: SPEC.md  config.py  coordination.py  coordination_runner.py  coordination_runner_test.py  miner.py  reporter.py  reporter_test.py  result.py  result_test.py  session.py  session_test.py  store.py  store_test.py  variants.py
benchmarks/subagent-decomposition/: SPEC.md  analyze.py  generate.py  run.py  variants.py
benchmarks/terminal-bench/: README.md  adapter.py  install.sh  requirements.txt
benchmarks/thread-coordination/: prompt.txt  run.sh
benchmarks/todo-tracking/: SPEC.md  run.py  score.py  variants.py
coding-agent/: Cargo.toml
coding-agent/prompts/: doing_tasks.md  executing_with_care.md  identity.md  orchestration.md  py_kernel.py  py_tau_api.json  system.md  thread_identity.md  tone_and_output.md
coding-agent/prompts/orchestration/: README.md  documents.md  overview.md  tools.md
coding-agent/src/: agent_builder.rs  cli.rs  config.rs  lib.rs  main.rs  markdown.rs  permissions.rs  serve.rs  session.rs  skills.rs  system_prompt.rs  trace.rs  tui.rs
coding-agent/src/orchestration/: mod.rs  rpc.rs  runtime.rs
coding-agent/src/rpc/: handler.rs  mod.rs  transport.rs  types.rs
coding-agent/src/tools/: bash.rs  document.rs  file_edit.rs  file_read.rs  file_write.rs  from_id.rs  glob.rs  grep.rs  hash_file_edit.rs  hash_file_read.rs  hashline.rs  log.rs  mod.rs  py_repl.rs  pycfg.rs  pycg.rs  query.rs  registry.rs  run_tests.rs  subagent.rs  thread.rs  todo.rs  web_fetch.rs  web_search.rs  worktree.rs
coding-agent/src/tui/: anim.rs  bridge.rs  editor.rs  layout.rs  mod.rs  model.rs  msg.rs  sidebar.rs  status.rs  theme.rs
coding-agent/src/tui/chat/: diff.rs  messages.rs  (+2 more)
coding-agent/tests/: benchmark_mode.rs  config_test.rs  glob_test.rs  grep_test.rs  hash_tools_test.rs  hashline_test.rs  integration.rs  prompt_mode_test.rs  py_tau_api_test.rs  pycfg_tools.rs  pycg_tools.rs  run_tests.rs  serve_test.rs  session_test.rs  system_prompt_test.rs  tool_allowlist.rs  tool_details.rs  tools_test.rs  trace_subscriber.rs  web_fetch_test.rs  web_search_test.rs
tools/tau-trace/: README.md  SPEC.md  pyproject.toml
tools/tau-trace/tau_trace/: __main__.py  app.py  detail.py  gantt.py  models.py  routing.py
(+188 files in other folders)
