[workspace]
members = ["ai", "agent", "coding-agent"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
criterion = { version = "0.5", features = ["html_reports"] }
toml = "0.8"
globset = "0.4"
ignore = "0.4"
ruse = { path = "../../tuis/ruse.sh/crates/ruse" }
