[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
ai = { path = "../ai" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
