[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
ai = { path = "../ai" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
criterion = { workspace = true }

[[bench]]
name = "agent_construction"
harness = false
