[package]
name = "ai"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
reqwest = { version = "0.12", features = ["json", "stream"] }

[dev-dependencies]
tempfile = "3"
tokio-util = { version = "0.7", features = ["rt"] }
proptest = "1"
criterion = { workspace = true }

[[bench]]
name = "sse_parsing"
harness = false
