[package]
name = "coding-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tau"
path = "src/main.rs"

[dependencies]
ai = { path = "../ai" }
agent = { path = "../agent" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
clap = { version = "4", features = ["derive"] }
chrono = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
globset = { workspace = true }
ignore = { workspace = true }
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tempfile = "3"
